# ha_magiqtouch

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.md  climate.py  config_flow.py  const.py  hacs.json  magiqtouch.py  manifest.json  pyproject.toml  structures.py
custom_components/magiqtouch/: __init__.py  __main__.py  climate.py  config_flow.py  const.py  exceptions.py  magiqtouch.py  manifest.json  sensor.py  strings.json  structures.py
custom_components/magiqtouch/translations/: en.json
translations/: en.json
