[tool.poetry]
name = "magiqtouch"
version = "0.1.0"
description = ""
authors = ["Andrew Leech <andrew@alelec.net>"]

[tool.poetry.dependencies]
python = "^3.10"
mandate = "2.0.1"
aiohttp = "^3.7.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
homeassistant = "^2022.8.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
