[project]
name = "magiqtouch"
version = "0.1.0"
description = ""
authors = [
    { name = "Andrew Leech", email = "andrew@alelec.net" }
]
dependencies = [
"mandate==2.0.1",
#"aiohttp==3.7.2",
#"requests==2.28.1",
"homeassistant==2024.2.5",
]
#[project.dev-dependencies]
#homeassistant = "^2022.8.6"
[tool.setuptools.packages.find]
where = [
    "custom_components"
]
[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disable_error_code = "import-untyped"
follow_imports_for_stubs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# Allow initialising structures with None
# without marking them as optional 
module = [
    'magiqtouch.structures',
]
disable_error_code = "assignment"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = [
    "E402",  # Module level import not at top of file
    "E722",  # don't use bare except
    "E731",  # do not assign a `lambda` expression"
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".ruff_cache",
    "custom_components/magiqtouch/vendor",
    "venv",
    ".venv",
    "__pypackages__",
]
# Same as our configuration of Black.
line-length = 99

[tool.ruff.format]
exclude = ["custom_components/magiqtouch/vendor"]